Updated the styling on product details page in the product reviews section by fixing the spacing and button style

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -257,6 +257,11 @@ input[name='q']::placeholder {
     border: 1px solid #000;
 }
 
+/* Product Review section */
+.reviews-wrapper {
+    margin: 5px 4px 0px 25px;
+}
+
 /* Footer */
 
 .footer-wrapper{
